# U0A2

./: CMakeLists.txt  README.md  ohmimetroe24.c
lib/config/: config.h
lib/ssd1306/: ssd1306.h
lib/utils/: get_E24_value.h  get_colors.h
lib/ws2812/: ws2812.h
